# learnlangchain

./: .gitignore  01_lesson_1.py  docker-compose.yml  pyproject.toml
admin/: ingest_rubrics.py
src/: app.py
src/data/: manifest.json  manifest_schema.py
src/data/assignments/: eng-001_question.txt  math-001_question.txt
src/data/rubrics/: eng-001_rubric.md  english_writing.txt  math-001_rubric.md
src/graph/: graph.py  init.py
src/graph/nodes/: calculate_pressure.py  evaluate.py  normalise.py  planning.py  rubric.py
src/graph/routes/: decision.py
src/graph/state/: schema.py
src/ingestion/: ingest_rubrics.py
src/nodes/: normalise.py  planning.py  rubric.py
src/state/: schema.py
src/tools/: doc_tools.py  documents.py  rubric_retriever.py  vector_tools.py
